# rag_api

./: Dockerfile  Makefile  README.md  TESTING.md  pyproject.toml  requirements.in  requirements.txt  run_qdrant_tests.py  test_requirements.txt
.github/workflows/: ci.yml  docker-build-workflow.yaml  images.yaml  release.yaml
app/: config.py
app/services/: custom_hf_embeddings.py
app/services/vector_store/: factory.py  qdrant_vector.py
docs/: custom_huggingface_embeddings.md
tests/services/: test_qdrant_vector.py
