[project]
name = "rag_api"
version = "0.1.0"
description = "RAG API with multiple vector store backends"
authors = [
    { name = "Justin Beaudry", email = "justinbeaudry@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "aiofiles==24.1.0",
    "aiohttp==3.13.1",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "attrs==25.4.0",
    "backoff==2.2.1",
    "beautifulsoup4==4.14.2",
    "boto3==1.34.144",
    "botocore==1.34.162",
    "bottleneck==1.6.0",
    "cachetools==6.2.1",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "chardet==5.2.0",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "coloredlogs==15.0.1",
    "cryptography==45.0.5",
    "dataclasses-json==0.6.7",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "docstring-parser==0.17.0",
    "docx2txt==0.9",
    "einops==0.8.0",
    "emoji==2.15.0",
    "et-xmlfile==2.0.0",
    "eval-type-backport==0.2.2",
    "fastapi==0.115.12",
    "filelock==3.20.0",
    "filetype==1.2.0",
    "flatbuffers==25.9.23",
    "frozenlist==1.8.0",
    "fsspec==2025.9.0",
    "google-ai-generativelanguage==0.6.18",
    "google-api-core[grpc]==2.27.0",
    "google-auth==2.41.1",
    "google-cloud-aiplatform==1.122.0",
    "google-cloud-bigquery==3.38.0",
    "google-cloud-core==2.4.3",
    "google-cloud-resource-manager==1.15.0",
    "google-cloud-storage==2.19.0",
    "google-crc32c==1.7.1",
    "google-genai==1.46.0",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos[grpc]==1.71.0",
    "grpc-google-iam-v1==0.14.3",
    "grpcio==1.76.0",
    "grpcio-status==1.76.0",
    "grpcio-tools==1.76.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hf-xet==1.2.0",
    "hpack==4.1.0",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httpx[http2]==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==0.36.0",
    "humanfriendly==10.0",
    "hyperframe==6.1.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "jiter==0.11.1",
    "jmespath==1.0.1",
    "joblib==1.5.2",
    "jsonpatch==1.33",
    "jsonpath-python==1.0.6",
    "jsonpointer==3.0.0",
    "langchain==0.3.27",
    "langchain-aws==0.2.7",
    "langchain-community==0.3.21",
    "langchain-core==0.3.79",
    "langchain-google-genai==2.1.10",
    "langchain-google-vertexai==2.1.2",
    "langchain-huggingface==0.1.0",
    "langchain-mongodb==0.2.0",
    "langchain-ollama==0.3.3",
    "langchain-openai==0.3.35",
    "langchain-qdrant==0.2.1",
    "langchain-text-splitters==0.3.11",
    "langdetect==1.0.9",
    "langsmith==0.3.45",
    "lxml==6.0.2",
    "markdown==3.8.2",
    "markupsafe==3.0.3",
    "marshmallow==3.26.1",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.2.1",
    "nltk==3.9.2",
    "numexpr==2.14.1",
    "numpy==1.26.2",
    "olefile==0.47",
    "ollama==0.6.0",
    "onnxruntime==1.23.2",
    "openai==2.6.1",
    "opencv-python==4.11.0.86",
    "opencv-python-headless==4.9.0.80",
    "openpyxl==3.1.5",
    "orjson==3.11.4",
    "packaging==25.0",
    "pandas==2.2.1",
    "pillow==12.0.0",
    "portalocker==2.10.1",
    "propcache==0.4.1",
    "proto-plus==1.26.1",
    "protobuf==6.33.0",
    "psutil==7.1.2",
    "pyarrow==21.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pyclipper==1.3.0.post6",
    "pycparser==2.23",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "pydantic-settings==2.11.0",
    "pyjwt==2.8.0",
    "pymongo==4.6.3",
    "pypandoc==1.15",
    "pypdf==6.0.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-iso639==2025.2.18",
    "python-magic==0.4.27",
    "python-multipart==0.0.19",
    "python-oxmsg==0.0.2",
    "python-pptx==1.0.2",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "qdrant-client==1.10.1",
    "rapidfuzz==3.14.1",
    "rapidocr-onnxruntime==1.2.3",
    "regex==2025.10.23",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rsa==4.9.1",
    "s3transfer==0.10.4",
    "safetensors==0.6.2",
    "scikit-learn==1.7.2",
    "scipy==1.10.1",
    "sentence-transformers==3.1.1",
    "shapely==2.1.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "sqlalchemy==2.0.4",
    "starlette==0.46.2",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tiktoken==0.12.0",
    "tokenizers==0.22.1",
    "torch==2.9.0",
    "tqdm==4.67.1",
    "transformers==4.57.1",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "unstructured==0.16.19",
    "unstructured-client==0.28.1",
    "urllib3==2.5.0",
    "validators==0.35.0",
    "webencodings==0.5.1",
    "websockets==15.0.1",
    "wrapt==2.0.0",
    "xlrd==2.0.2",
    "xlsxwriter==3.2.9",
    "yarl==1.22.0",
    "zstandard==0.23.0",
    "uvicorn>=0.38.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.9",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = [
    "pytest>=6.2.4",
    "pytest-asyncio>=0.15.1",
    "pytest-cov>=2.12.1",
    "black>=21.5b1",
    "flake8>=3.9.2",
    "mypy>=0.910",
    "pre-commit>=2.13.0",
]
